--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --exec ts-node index.ts",
+    "dev": "npx nodemon --exec ts-node index.ts",
     "start": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
@@ -12,26 +12,26 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "type": "commonjs",
   "dependencies": {
-    "@types/nodemon": "^1.19.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
-    "nodemon": "^3.1.10",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.8",
+    "nodemon": "^2.0.22",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
