--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,15 @@
   "license": "MIT",
   "dependencies": {
     "@types/dotenv": "^6.1.1",
-    "@types/multer": "^2.0.0",
+    "@types/multer": "^1.4.13",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1",
+    "mongodb": "^6.17.0",
     "multer": "^2.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
@@ -29,9 +31,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/mongoose": "^5.11.96",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^24.0.8",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
